cleanup data notebook

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -120,85 +120,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "ba9366f6-61dc-4362-ab02-c1ea33f53564",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = random.sample(list(articles.items()), 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "023d3023-0db6-4012-8b42-42a412f12069",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = OpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "fb8d9466-98af-4174-8e9b-caab49336ae6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample2 = [(k, articles[k]) for k in [\"100_center\", \"100_left\", \"100_right\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "aa3b15c8-0707-4f57-a334-984d8287ada8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 3/3 [00:41<00:00, 13.94s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in tqdm(sample2):\n",
-    "    response = generate_summary(value)\n",
-    "    with open(f\"Summaries/{key}.txt\", \"w+\") as f:\n",
-    "        f.write(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "2fc6fb0a-ff45-42ff-8939-2e3f3bd976bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = sample[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "1a6d1dac-756e-4686-9050-148fd3d9ae67",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.3 s ± 2.71 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit response = generate_summary(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 115,
    "id": "c2d9cdc5-7e73-4f6a-8037-b02914d906d5",
    "metadata": {},
@@ -214,6 +135,7 @@
     }
    ],
    "source": [
+    "# parse articles into proper format for api_request_parallel_processor\n",
     "with open(\"articles.jsonl\", \"w+\") as f:\n",
     "    for key, text in articles.items():\n",
     "        prompt = \"Summarize the following:\\n\" + text\n",
@@ -231,27 +153,6 @@
    "metadata": {},
    "source": [
     "=> put these manually into GPT-4 web interface"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "id": "8eb3606d-5f7c-43c0-b510-77b0a9c8b03d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6792"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(text.split())"
    ]
   },
   {
@@ -278,7 +179,7 @@
     }
    ],
    "source": [
-    "prompt = \"Summarize the following:\\n\" + text\n",
+    "prompt = \"Summarize the following:\\n\" + text # example prompt\n",
     "enc = encoder.encode(prompt)\n",
     "dec = encoder.decode(enc[:8192])"
    ]
@@ -378,28 +279,6 @@
    "outputs": [],
    "source": [
     "biases = {\"left\", \"right\", \"center\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "7bd98877-7967-4820-9337-1d54dfdd5b32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = []\n",
-    "for key in articles.keys():\n",
-    "    topic_id, article_bias = key.split(\"_\")\n",
-    "    for bias in biases:\n",
-    "        text = articles.get(f\"{topic_id}_{bias}\")\n",
-    "        if text:\n",
-    "              data.append({\n",
-    "                  \"id\": topic_id,\n",
-    "                  \"article_bias\": article_bias,\n",
-    "                  \"summary_bias\": bias,\n",
-    "                  \"article\": text,\n",
-    "                  \"summary\": summs[f\"{topic_id}_{bias}\"]\n",
-    "              })"
    ]
   },
   {
@@ -661,7 +540,7 @@
    "id": "fc62c6fe-8a41-4d6e-b8a1-f326b81cce92",
    "metadata": {},
    "source": [
-    "## split"
+    "## train/val/test split based on topic id"
    ]
   },
   {
@@ -840,6 +719,14 @@
    "source": [
     "with open(\"test.json\", \"w+\") as f:\n",
     "    json.dump(test, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f962b9",
+   "metadata": {},
+   "source": [
+    "## make hf dataset"
    ]
   },
   {
