cleanup test notebook

--- a/models/test.ipynb
+++ b/models/test.ipynb
@@ -264,25 +264,12 @@
     }
    ],
    "source": [
+    "# no training actually done here; just use Trainer as a wrapper for predict()\n",
     "batch_size = 4\n",
     "args = Seq2SeqTrainingArguments(\n",
     "    \"test\",\n",
     "    evaluation_strategy=\"steps\",\n",
-    "    # eval_steps=150,\n",
-    "    # warmup_steps=500,\n",
-    "    # learning_rate=2e-5,\n",
-    "    # per_device_train_batch_size=batch_size,\n",
     "    per_device_eval_batch_size=batch_size,\n",
-    "    # weight_decay=0.01,\n",
-    "    # log_level=\"info\",\n",
-    "    # logging_dir=\"./log\",\n",
-    "    # logging_first_step=True,\n",
-    "    # logging_steps=5,\n",
-    "    # save_total_limit=3,\n",
-    "    # save_strategy=\"steps\",\n",
-    "    # save_steps=150,\n",
-    "    # load_best_model_at_end=True,\n",
-    "    # num_train_epochs=25,\n",
     "    predict_with_generate=True,\n",
     "    fp16=True,\n",
     ")\n",
@@ -302,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "id": "af5d48e6",
    "metadata": {},
    "outputs": [],
@@ -705,8 +692,8 @@
     }
    ],
    "source": [
-    "# Show a few example outputs\n",
-    "for i in indexes:  # Just show the first 5 examples\n",
+    "# Show example outputs with id=3711\n",
+    "for i in indexes:\n",
     "    print(f\"Article Bias: {test[i]['article_bias']}, Summary Bias: {test[i]['summary_bias']}, ID: {test[i]['id']}\")\n",
     "    print(f\"Article: {test[i]['article']}\")\n",
     "    print()\n",
@@ -843,6 +830,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "580d6947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_out_texts = [tokenizer.decode(token_ids, skip_special_tokens=True) for token_ids in train_outputs.predictions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "96305833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Trump administration is continuing to waive entrance fees at national parks during the coronavirus pandemic, despite requests from local managers to close some of the parks, while others remain open and free of charge. The National Parks Conservation Association, a nonprofit group that advocates on park policy issues, called the decision to keep the Grand Canyon open “beyond reckless”. Critics see the decision as a mixed message with potentially dangerous consequences for virus spread. The Trump administration has issued guidelines to Americans urging them to stay at home whenever necessary, skip discretionary travel and avoid gatherings of more than 10 people. Despite efforts at the Smoky Mountains park to protect staff and visitors from COVID-19,'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_out_texts[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9eb49903",
    "metadata": {},
@@ -899,6 +917,60 @@
    "source": [
     "val_outputs.metrics"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6fa05c1",
+   "metadata": {},
+   "source": [
+    "# Save train/val/test outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "4693400c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "839ec799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('model_outputs/train.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(train_outputs))\n",
+    "    \n",
+    "with open('model_outputs/val.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(val_outputs))\n",
+    "\n",
+    "with open('model_outputs/test.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c457d4d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('model_outputs/test.pkl', 'rb') as file:\n",
+    "    test = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d363d2c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
